# zorba-node

./: CMakeLists.txt  README.md  binding.gyp  example.js  package.json
src/: Execute.cpp  NodeDiagnosticHandler.cpp  QueryManager.cpp  helpers.cpp  main.cpp
win/include/: JavaVMSingleton.h
win/include/zorba/: config.h
win/lib/: zorba_simplestore.lib
